webdir = $(datadir)/blip/web/data

web_DATA =				\
	admon-error-16.png		\
	admon-information-16.png	\
	admon-warning-16.png		\
	badge-author-16.png		\
	badge-coordinator-16.png	\
	badge-editor-16.png		\
	badge-maintainer-16.png		\
	badge-publisher-16.png		\
	bullet.png			\
	download-16.png			\
	expander-closed.png		\
	expander-open.png		\
	expander-up.png			\
	go-next.png			\
	go-prev.png			\
	header-logo.png			\
	linkbullet.png			\
	blip.css			\
	blip.js				\
	jquery.js			\
	jquery.cookie.js		\
	jquery.ui.js

EXTRA_DIST = $(web_DATA)
